syntax = "proto3";

package pb;

service PostService {
  rpc CreatePost (CreatePostRequest) returns (CreatePostResponse) {}
  rpc ReadPost (ReadPostRequest) returns (ReadPostResponse) {}
  rpc UpdatePost (UpdatePostRequest) returns (UpdatePostResponse) {}
  rpc DeletePost (DeletePostRequest) returns (DeletePostResponse) {}
}

message Post {
  string id = 1;
  string title = 2;
  string content = 3;
  string timestamp_created = 4;
  string timestamp_updated = 5;
}

message CreatePostRequest {
  Post post = 1;
}

message CreatePostResponse {
  Post post = 1;
}

message ReadPostRequest {
  string id = 1;
}

message ReadPostResponse {
  Post post = 1;
}

message UpdatePostRequest {
  Post post = 1;
}

message UpdatePostResponse {
  Post post = 1;
}

message DeletePostRequest {
  string id = 1;
}

message DeletePostResponse {
  bool success = 1;
}
